force-app/main/default/objects/nFORCE__Business_Activity__c/fields/nFORCE__Business_Process__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Business_Process__c</fullName>
    <description>The user populates this master-detail relationship field to indicate the business activity&apos;s corresponding business process.</description>
    <inlineHelpText>Enter the name of the business process you want to associate with the business activity.</inlineHelpText>
    <label>Business Process</label>
    <referenceTo>nFORCE__Business_Process__c</referenceTo>
    <relationshipLabel>Business Process Activities</relationshipLabel>
    <relationshipName>Business_Process</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>