force-app/main/default/objects/nFORCE__Business_Activity__c/fields/nFORCE__Chain_State_Data__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Chain_State_Data__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The user populates this optional checkbox field to indicate if the state data from this business activity should be passed to the next business activity. By default, it is false.</description>
    <inlineHelpText>When set to true, this checkbox indicates that state data from this business activity should be passed to the next business activity.</inlineHelpText>
    <label>Chain State Data</label>
    <type>Checkbox</type>
</CustomField>