force-app/main/default/objects/nFORCE__Business_Activity__c/fields/nFORCE__Is_Scheduled_Single_Run__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Is_Scheduled_Single_Run__c</fullName>
    <defaultValue>true</defaultValue>
    <description>The user populates this optional checkbox field to indicate if the system should schedule the business activity for a single run.  If set to true, it will run once, otherwise it will run on a recurring basis. By default, it is true.</description>
    <inlineHelpText>This checkbox field indicates if the system should schedule the business activity to run once.</inlineHelpText>
    <label>Is Scheduled Single Run</label>
    <type>Checkbox</type>
</CustomField>