force-app/main/default/objects/nFORCE__Business_Activity__c/fields/nFORCE__Wait_For_External_Update__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Wait_For_External_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The user populates this checkbox to indicate that the business activity should remain in progress until an external process updates the status to continue. By default, it is false.</description>
    <inlineHelpText>This checkbox indicates that the business activity should remain in progress until an external process updates the status to continue.</inlineHelpText>
    <label>Wait For External Update</label>
    <type>Checkbox</type>
</CustomField>